--- a/template/shop/index.html
+++ b/template/shop/index.html
@@ -1,6 +1,4 @@
-<%
-const page = htmlWebpackPlugin.options.pageData || {};
-%>
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,20 +7,20 @@ const page = htmlWebpackPlugin.options.pageData || {};
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= page.icon %>">
-  <link rel="manifest" href="<%= page.manifest %>">
-  <title><%= page.title %></title>
-</head>
+  <link rel="icon" href="../../manifest/shop/favicon.ico">
+  <link rel="manifest" href="../../manifest/shop/manifest.json">
+  <title>商店</title>
+<link href="../../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="../../js/shop.f0e50ab7.js" rel="preload" as="script"></head>
 
 <body>
 <noscript>
-  <strong><%= page %></strong>
+  <strong>[object Object]</strong>
 </noscript>
 <div id="app">
-  <div id="<%= page.code %>"></div>
+  <div id="shop"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-</body>
+<script type="text/javascript" src="../../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="../../js/app.19ccf687.js"></script><script type="text/javascript" src="../../js/shop.f0e50ab7.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   console.log(123)
