--- a/template/box.html
+++ b/template/box.html
@@ -6,20 +6,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="manifest/page/favicon.ico">
-  <link rel="manifest" href="manifest/page/manifest.json">
-  <title>page</title>
-<link href="/pwa-web/css/page.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/page.7e722f54.js" rel="preload" as="script"><link href="/pwa-web/css/page.3fe51d8b.css" rel="stylesheet"></head>
+  <link rel="icon" href="manifest/box/favicon.ico">
+  <link rel="manifest" href="manifest/box/manifest.json">
+  <title>商店详情</title>
+<link href="../../css/box.3fe51d8b.css" rel="preload" as="style"><link href="../../js/box.4178b72f.js" rel="preload" as="script"><link href="../../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="../../css/box.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
   <strong>[object Object]</strong>
 </noscript>
 <div id="app">
-  <div id="page"></div>
+  <div id="box"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="/pwa-web/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/js/app.47ca4404.js"></script><script type="text/javascript" src="/pwa-web/js/page.7e722f54.js"></script></body>
+<script type="text/javascript" src="../../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="../../js/app.95fedda0.js"></script><script type="text/javascript" src="../../js/box.4178b72f.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
