--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="manifest/index/favicon.ico">
   <link rel="manifest" href="manifest/index/manifest.json">
   <title>首页</title>
-<link href="../../css/index.3fe51d8b.css" rel="preload" as="style"><link href="../../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="../../js/index.880abc31.js" rel="preload" as="script"><link href="../../css/index.3fe51d8b.css" rel="stylesheet"></head>
+<link href="/pwa-web/css/index.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/index.569a2c3e.js" rel="preload" as="script"><link href="/pwa-web/css/index.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
@@ -19,7 +19,7 @@
   <div id="index"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="../../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="../../js/app.95fedda0.js"></script><script type="text/javascript" src="../../js/index.880abc31.js"></script></body>
+<script type="text/javascript" src="/pwa-web/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/js/app.47ca4404.js"></script><script type="text/javascript" src="/pwa-web/js/index.569a2c3e.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
