--- a/template/page.html
+++ b/template/page.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="manifest/page/favicon.ico">
   <link rel="manifest" href="manifest/page/manifest.json">
   <title>page</title>
-<link href="../../css/page.3fe51d8b.css" rel="preload" as="style"><link href="../../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="../../js/page.b547ba8c.js" rel="preload" as="script"><link href="../../css/page.3fe51d8b.css" rel="stylesheet"></head>
+<link href="/pwa-web/css/page.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/page.7e722f54.js" rel="preload" as="script"><link href="/pwa-web/css/page.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
@@ -19,7 +19,7 @@
   <div id="page"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="../../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="../../js/app.95fedda0.js"></script><script type="text/javascript" src="../../js/page.b547ba8c.js"></script></body>
+<script type="text/javascript" src="/pwa-web/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/js/app.47ca4404.js"></script><script type="text/javascript" src="/pwa-web/js/page.7e722f54.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
