--- a/template/index.html
+++ b/template/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="manifest/index/favicon.ico">
-  <link rel="manifest" href="manifest/index/manifest.json">
+  <link rel="icon" href="../../manifest/index/favicon.ico">
+  <link rel="manifest" href="../../manifest/index/manifest.json">
   <title>首页</title>
 <link href="/pwa-web/css/index.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/index.569a2c3e.js" rel="preload" as="script"><link href="/pwa-web/css/index.3fe51d8b.css" rel="stylesheet"></head>
 
