--- a/template/page.html
+++ b/template/page.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="manifest/page/favicon.ico">
-  <link rel="manifest" href="manifest/page/manifest.json">
-  <title>page</title>
+  <link rel="icon" href="../../manifest/page/favicon.ico">
+  <link rel="manifest" href="../../manifest/page/manifest.json">
+  <title>首页</title>
 <link href="/pwa-web/css/page.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/page.7e722f54.js" rel="preload" as="script"><link href="/pwa-web/css/page.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
